Adjusted the scrollbar on the right correctly

--- a/frontend/src/assets/base.css
+++ b/frontend/src/assets/base.css
@@ -86,9 +86,12 @@ body {
 }
 html, body, #app {
   height: 100%;
-  overflow: hidden;
+  margin: 0;
+  overflow: hidden !important; /* Verhindert Body-Scrollbar (die ganz lange) */
 }
 
 .v-application {
   height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
